--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <section class="banner">
     <div class="textBx">
-      <h2>Hi, I'm<br><span>Lodi Palle.</span></h2>
-      <h3>I'm a Full Stack Developer.</h3>
+      <h2>Hi, I am<br><span>Lodi Palle.</span></h2>
+      <h3>A Frontend Engineer.</h3>
       <a href="#" class="btn">About Me</a>
     </div>
   </section>
