added Home, About, Skills, Works, Feedback, and Contact on index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>My Personal Portfolio</title>
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <a href="#" class="logo">My Portfolio</a>
+    <div class="toggle">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Works</a></li>
+        <li><a href="#">Feedback</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
   <section class="banner">
     <div class="textBx">
       <h2>Hi, I'm<br><span>Lodi Palle,</span></h2>
