--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Works</a></li>
-        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Reviews</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
