added details on about me and adjuste size of pic via the style.css

--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
     <div class="content">
       <div class="contentBx w50">
         <h3>Frontend Engineer</h3>
-        <p>I am adept at using Ruby, SQL, Javascript, HTML, and CSS. But my passion is on the frontend side - designing and building website appeals to my creative, artistic, and innovative side. Trained as a full stack engineer, I also extensively use Figma, GitHub, Trello, and Heroku on various projects. <br><br>As a longtime former healthcare professional, I pride myself in being able to work effectively within a team and function well during high pressure situations. As a software engineer, my vision is to make exciting software that will benefit the world.</p>
+        <p>I am adept at using Ruby, SQL, Javascript, HTML, and CSS.
+          But my passion is on the frontend side - designing and building website appeals to my creative, artistic, and innovative side.
+          Trained as a full stack engineer, I also extensively use Figma, GitHub, Trello, and Heroku on various projects.
+          <br><br>As a longtime former healthcare professional, I pride myself in being able to work effectively within a team and function well during high pressure situations.
+          As a software engineer, my vision is to make exciting software that will benefit the world.</p>
       </div>
-    </div>
-    <div class="w50">
-      <img src="my-pic.jpg" class="img" alt="lodi">
+      <div class="w50">
+        <img src="my-pic.jpg" class="img" alt="lodi">
+      </div>
     </div>
   </section>
 </body>
