added javascript functionality on sticky header and added transition effects on style.css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="content">
       <div class="contentBx w50">
-        <h3>Frontend Engineer</h3>
+        <h3>Trained in full stack with emphasis on the frontend.</h3>
         <p>I am adept at using Ruby, SQL, Javascript, HTML, and CSS.
           But my passion is on the frontend side - designing and building website appeals to my creative, artistic, and innovative side.
           Trained as a full stack engineer, I also extensively use Figma, GitHub, Trello, and Heroku on various projects.
@@ -45,5 +45,11 @@
       </div>
     </div>
   </section>
+  <script type="text/javascript">
+    window.addEventListener('scroll', function() {
+      var header = document.querySelector('header');
+      header.classList.toggle('sticky', window.scrollY > 0);
+    });
+  </script>
 </body>
 </html>
