added skills icons and details on index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
       </div>
     </div>
   </section>
+  <section class="skills">
+    <div class="heading">
+      <h2>Skills</h2>
+      <p>Languages I am currently proficient with:</p>
+    </div>
+    <div class="content">
+      <div class="skillsBx">
+        <img src="html.png" alt="HTML">
+      </div>
+      <div class="skillsBx">
+        <img src="css.png" alt="CSS">
+      </div>
+      <div class="skillsBx">
+        <img src="javascript.png" alt="Javascript">
+      </div>
+      <div class="skillsBx">
+        <img src="ruby.png" alt="Ruby/Ruby on Rails">
+      </div>
+      <div class="skillsBx">
+        <img src="sql.png" alt="SQL">
+      </div>
+    </div>
+  </section>
   <script type="text/javascript">
     window.addEventListener('scroll', function() {
       var header = document.querySelector('header');
