added new icons for services and updated icons for skills, updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Works</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
@@ -48,7 +48,7 @@
   <section class="skills">
     <div class="heading">
       <h2>Skills</h2>
-      <p>Languages I am currently proficient with:</p>
+      <p>Languages I am proficient with:</p>
     </div>
     <div class="content">
       <div class="skillsBx">
@@ -67,6 +67,31 @@
         <img src="sql.png" alt="SQL">
       </div>
     </div>
+    <section class="Works">
+
+    </section>
+    <section class="skills">
+      <div class="heading">
+        <h2>Services</h2>
+        <p>Expertise I can share with:</p>
+      </div>
+      <div class="content">
+        <div class="servicesBx">
+          <img src="html.png" alt="frontend">
+        </div>
+        <div class="skillsBx">
+          <img src="css.png" alt="CSS">
+        </div>
+        <div class="skillsBx">
+          <img src="javascript.png" alt="Javascript">
+        </div>
+        <div class="skillsBx">
+          <img src="ruby.png" alt="Ruby/Ruby on Rails">
+        </div>
+        <div class="skillsBx">
+          <img src="sql.png" alt="SQL">
+        </div>
+      </div>
   </section>
   <script type="text/javascript">
     window.addEventListener('scroll', function() {
