updated services and added headings on skills

--- a/index.html
+++ b/index.html
@@ -53,18 +53,23 @@
     <div class="content">
       <div class="skillsBx">
         <img src="html.png" alt="HTML">
+        <h2>HTML</h2>
       </div>
       <div class="skillsBx">
         <img src="css.png" alt="CSS">
+        <h2>CSS</h2>
       </div>
       <div class="skillsBx">
         <img src="javascript.png" alt="Javascript">
+        <h2>Javascript</h2>
       </div>
       <div class="skillsBx">
         <img src="ruby.png" alt="Ruby/Ruby on Rails">
+        <h2>Ruby/Ruby on Rails</h2>
       </div>
       <div class="skillsBx">
         <img src="sql.png" alt="SQL">
+        <h2>SQL</h2>
       </div>
     </div>
     <section class="Works">
@@ -77,19 +82,16 @@
       </div>
       <div class="content">
         <div class="servicesBx">
-          <img src="html.png" alt="frontend">
+          <img src="frontend.png" alt="Frontend">
+          <h2>Frontend/Web Design</h2>
         </div>
-        <div class="skillsBx">
-          <img src="css.png" alt="CSS">
+        <div class="servicesBx">
+          <img src="backend.png" alt="Backend">
+          <h2>Backend Framework</h2>
         </div>
-        <div class="skillsBx">
-          <img src="javascript.png" alt="Javascript">
-        </div>
-        <div class="skillsBx">
-          <img src="ruby.png" alt="Ruby/Ruby on Rails">
-        </div>
-        <div class="skillsBx">
-          <img src="sql.png" alt="SQL">
+        <div class="servicesBx">
+          <img src="photography.png" alt="Photography">
+          <h2>Photography and Image Editing</h2>
         </div>
       </div>
   </section>
