redesigning website from scratch

--- a/index.html
+++ b/index.html
@@ -1,105 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <a href="#" class="logo">My Portfolio</a>
-    <div class="toggle">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Works</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </header>
-  <section class="banner">
-    <div class="textBx">
-      <h2>Hi, I'm<br><span>Lodi Palle,</span></h2>
-      <h3>Frontend Engineer.</h3>
-      <a href="#" class="btn">About Me</a>
-    </div>
-  </section>
-  <section class="about">
-    <div class="heading">
-      <h2>About Me</h2>
-    </div>
-    <div class="content">
-      <div class="contentBx w50">
-        <h3>Trained in full stack with emphasis on the frontend.</h3>
-        <p>I am adept at using Ruby, SQL, Javascript, HTML, and CSS.
-          But my passion is on the frontend side - designing and building website appeals to my creative, artistic, and innovative side.
-          Trained as a full stack engineer, I also extensively use Figma, GitHub, Trello, and Heroku on various projects.
-          <br><br>As a longtime former healthcare professional, I pride myself in being able to work effectively within a team and function well during high pressure situations.
-          As a software engineer, my vision is to make exciting software that will benefit the world.</p>
-      </div>
-      <div class="w50">
-        <img src="my-pic.jpg" class="img" alt="lodi">
-      </div>
-    </div>
-  </section>
-  <section class="skills">
-    <div class="heading">
-      <h2>Skills</h2>
-      <p>Languages I am proficient with:</p>
-    </div>
-    <div class="content">
-      <div class="skillsBx">
-        <img src="html.png" alt="HTML">
-        <h2>HTML</h2>
-      </div>
-      <div class="skillsBx">
-        <img src="css.png" alt="CSS">
-        <h2>CSS</h2>
-      </div>
-      <div class="skillsBx">
-        <img src="javascript.png" alt="Javascript">
-        <h2>Javascript</h2>
-      </div>
-      <div class="skillsBx">
-        <img src="ruby.png" alt="Ruby/Ruby on Rails">
-        <h2>Ruby/Ruby on Rails</h2>
-      </div>
-      <div class="skillsBx">
-        <img src="sql.png" alt="SQL">
-        <h2>SQL</h2>
-      </div>
-    </div>
-    <section class="Works">
-
-    </section>
-    <section class="skills">
-      <div class="heading">
-        <h2>Services</h2>
-        <p>Expertise I can share with:</p>
-      </div>
-      <div class="content">
-        <div class="servicesBx">
-          <img src="frontend.png" alt="Frontend">
-          <h2>Frontend/Web Design</h2>
-        </div>
-        <div class="servicesBx">
-          <img src="backend.png" alt="Backend">
-          <h2>Backend Framework</h2>
-        </div>
-        <div class="servicesBx">
-          <img src="photography.png" alt="Photography">
-          <h2>Photography and Image Editing</h2>
-        </div>
-      </div>
-  </section>
-  <script type="text/javascript">
-    window.addEventListener('scroll', function() {
-      var header = document.querySelector('header');
-      header.classList.toggle('sticky', window.scrollY > 0);
-    });
-  </script>
-</body>
+  <head></head>
+  
 </html>
