refining portfolio website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>My Portfolio Website</title>
+    <link rel="stylesheet" href="fonts/font-awesome.css">
+    <link rel="stylesheet" href="fonts/google-fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery.js"></script>
+  </head>
+  <body>
   
+  <header>
+    <ul>
+      <li><a href="#home">home</a></li>
+      <li><a href="#about">about</a></li>
+      <li><a href="#skills">skills</a></li>
+      <li><a href="#works">work</a></li>
+      <li><a href="#contact">contact</a></li>
+    </ul>
+  <nav>
+
+  </nav>
+
+  </header>
+
+  
+    
+  </body>
 </html>
