redesigning style.scss

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <script src="js/jquery.js"></script>
   </head>
   <body>
-  
   <header>
-    <ul>
-      <li><a href="#home">home</a></li>
-      <li><a href="#about">about</a></li>
-      <li><a href="#skills">skills</a></li>
-      <li><a href="#works">work</a></li>
-      <li><a href="#contact">contact</a></li>
-    </ul>
-  <nav>
-
+    <nav>
+      <ul>
+        <li><a href="#home">home</a></li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#skills">skills</a></li>
+        <li><a href="#works">work</a></li>
+        <li><a href="#contact">contact</a></li>
+      </ul>
   </nav>
+  <a href="#"><h1>Lodi</h1></a>
 
   </header>
 
