--- a/index.html
+++ b/index.html
@@ -222,10 +222,16 @@
         </select>
         <label for="subject">Subject:</label>
         <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
-      <input type="submit">
+      <input type="submit" value="submit">
       </form>
     </div>
   </section>
+  <footer class="copyright">
+    <div class="up" id="up">
+      <i class="fas fa-chevron-up"></i>
+      <p>&copy; 2020 Lodi Palle</p>
+    </div>
+  </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
