adding new styling on main.css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profile-img">
-        <img src="images/profile.jpg" alt="">
+        <img src="images/profile.jpg" alt="Lodi">
       </div>
       <div class="about-details">
         <div class="about-heading">
@@ -59,19 +59,24 @@
           ipsa eveniet quos officia temporibus libero ex perferendis vel dolorem.
           Dolore, sed laborum. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
         </p>
-      </div>
-      <div class="social-media">
-        <div class="nav-list">
-          <li>
-            <a href="#" class="icon-link">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="icon-link">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </li>
+        <div class="social-media">
+          <div class="nav-list">
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-github-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </div>
         </div>
       </div>
     </div>
@@ -125,7 +130,7 @@
         <h6>View some of my recent work</h6>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
+        <div class="portfolio-img has-margin-right">
           <img src="images/portitem1.jpeg" alt="">
         </div>
         <div class="portfolio-description">
@@ -139,7 +144,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-description">
+        <div class="portfolio-description has-margin-right">
           <h6>Web Design</h6>
           <h1>Product Layout</h1>
           <p>
@@ -153,7 +158,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
+        <div class="portfolio-img has-margin-right">
           <img src="images/portitem3.jpeg" alt="">
         </div>
         <div class="portfolio-description">
