finalised styling on main.css & corrected some errors on index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <img src="images/portitem3.jpeg" alt="">
         </div>
         <div class="portfolio-description">
-          <h6>Web Design</h6>
+          <h6>Photography</h6>
           <h1>Product Sketch</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -234,8 +234,8 @@
   <footer class="copyright">
     <div class="up" id="up">
       <i class="fas fa-chevron-up"></i>
-      <p>&copy; 2020 Lodi Palle</p>
     </div>
+    <p>&copy; 2020 Lodi Palle</p>
   </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
