--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <select name="services" id="service">
           <option value="">Web Design</option>
           <option value="">Web Development</option>
-          <option value="">Web Design/Development</option>
+          <option value="">Photography</option>
         </select>
         <label for="subject">Subject:</label>
         <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
