--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Software Engineer | Photographer</h6>
+      <h6>Software Engineer | Web Design | Photographer</h6>
     </div>
   </header>
 
@@ -54,10 +54,17 @@
           <h6>Myself</h6>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Quisquam deleniti ullam sapiente, consectetur illum minus culpa maxime
-          ipsa eveniet quos officia temporibus libero ex perferendis vel dolorem.
-          Dolore, sed laborum. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          My vision is to build huge and exciting software that is
+          both essential to the world and commercially successful.
+          As a software engineer, my real passion is on web and UX design.
+          Creating software appeals to my artistic, creativite, and innovative side,
+          hence I am always looking to grow and improve as a developer. <br><br>
+          As a former nurse, I am efficient in working within a team and in high
+          pressure work situations. As a former afterhours nurse in-charge,
+          I am capable of managing a team myself. <br><br>
+          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, Bootstrap, and CSS <br>
+          <u>Currently Learning</u>: React.js, Framework & Algorithms, and Python <br>
+          <u>Other Skills</u>: Facebook Ads, Lightroom, Trello, GitHub, Heroku, and Figma
         </p>
         <div class="social-media">
           <div class="nav-list">
