--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
   <header>
     <div class="menu-toggler">
@@ -42,6 +43,9 @@
       <h6>Software Engineer | Web Design | Photographer</h6>
     </div>
   </header>
+
+
+  <!-- Start of About Myself -->
 
   <section class="about" id="about">
     <div class="container">
@@ -89,6 +93,11 @@
     </div>
   </section>
 
+  <!-- End of About Myself -->
+
+
+  <!-- Start of My Services -->
+
   <section class="services" id="services">
     <div class="container">
       <div class="section-heading">
@@ -129,6 +138,11 @@
       </div>
     </div>
   </section>
+
+  <!-- End of My Services -->
+
+
+  <!-- Start of My Portfolio -->
 
   <section class="portfolio" id="portfolio">
     <div class="container">
@@ -181,6 +195,11 @@
     </div>
   </section>
 
+  <!-- End of My Portfolio -->
+
+
+  <!-- Start of My Work Experience -->
+
   <section class="experience" id="experience">
     <div class="container">
       <div class="section-heading">
@@ -215,6 +234,11 @@
     </div>
   </section>
 
+  <!-- End of My Work Experience -->
+
+  
+  <!-- Start of Contact Me -->
+
   <section class="contact" id="contact">
     <div class="container">
       <div class="section-heading">
@@ -245,6 +269,9 @@
     <p>&copy; 2020 Lodi Palle</p>
   </footer>
 
+  <!-- End of Contact Me -->
+
+  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
