edited work experience timeline

--- a/index.html
+++ b/index.html
@@ -208,26 +208,54 @@
       </div>
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
-          <li class="date" data-date="2011 - Present">
-            <h1>Google</h1>
+          <li class="date" data-date="2016 - 2020">
+            <h1>Australian Unity</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Feb 2016 - May 2020<br>
+              Afterhours Facility In-charge (Grade 5 RN)
             </p>
           </li>
-          <li class="date" data-date="2008 - 2011">
-            <h1>Facebook</h1>
+          <li class="date" data-date="2019 - 2020">
+            <h1>Aktrapid Nursing</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sept 2019 - May 2020<br>
+              Grade 5 RN
             </p>
           </li>
-          <li class="date" data-date="2002 - 2007">
-            <h1>Microsoft</h1>
+          <li class="date" data-date="2019 - 2020">
+            <h1>Belmore Nurses</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sept 2019 - May 2020<br>
+              Grade 5 RN
             </p>
+          </li>
+          <li class="date" data-date="2020 - 2020">
+            <h1>Healthcare Australia</h1>
+            <p>
+              Feb 2020 - May 2020<br>
+              Grade 5 RN
+            </p>
+            <li class="date" data-date="2019 - 2019">
+              <h1>Royal Freemasons</h1>
+              <p>
+                May 2019 - Sept 2019<br>
+                Afterhours Supervisor (Grade 5 RN)
+              </p>
+            </li>
+            <li class="date" data-date="2017 - 2018">
+              <h1>ArCare</h1>
+              <p>
+                Aug 2017 - May 2018<br>
+                Grade 5 RN
+              </p>
+            </li>
+            <li class="date" data-date="2016 - 2017">
+              <h1>CaSPACare</h1>
+              <p>
+                Feb 2016 - Feb 2017<br>
+                Grade 3 RN
+              </p>
+            </li>
           </li>
         </ul>
       </div>
@@ -271,7 +299,7 @@
 
   <!-- End of Contact Me -->
 
-  
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="main.js"></script>
