--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-          <img src="images/portitem1.jpeg" alt="">
+          <img src="images/portitem1.png" alt="">
         </div>
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
           <h6>Web Development</h6>
-          <h1>Blog Website</h1>
+          <h1>MyHomies App</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
