--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
-          <img src="images/portitem3.jpeg" alt="">
+          <img src="images/portitem3.jpg" alt="">
         </div>
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
           <h6>Photography</h6>
-          <h1>Product Sketch</h1>
+          <h1>Flinders Station Landscape Shot</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
