edited pic & description of service #2

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900">
           <h6>Web Design</h6>
-          <h1>Product Layout</h1>
+          <h1>Restaurant Menu Page</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
