--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
           <h6>Web Development</h6>
           <h1>MyHomies App</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            An all-purpose app for housemates! Built thru Ruby on Rails framework using Ruby,
+            Javascript, HTML, and SCSS, this software allows for household members to manage
+            home expenses, assign chores, & organize events. It also has a built-in chatroom
+            to make communication within house quick, simple, & reliable.
           </p>
           <a href="#" class="cta">View Details</a>
         </div>
@@ -169,13 +171,14 @@
           <h6>Web Design</h6>
           <h1>Restaurant Menu Page</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Built using Javascript, HTML, and CSS, I designed and built this webpage for a restaurant 
+            which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
+            Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
           </p>
           <a href="#" class="cta">View Details</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-          <img src="images/portitem2.jpeg" alt="">
+          <img src="images/portitem2.jpg" alt="">
         </div>
       </div>
       <div class="portfolio-item">
@@ -186,8 +189,10 @@
           <h6>Photography</h6>
           <h1>Flinders Station Landscape Shot</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            As a photographer, my real passion is in landscape photography. Though my favourite is
+            doing long exposure shots on exotic environments and dramatic backdrops, I do enjoy
+            doing portrait shoots sometimes as well. I mostly shoot on micro four thirds format using
+            my trusty Panasonic Lumix G9.
           </p>
           <a href="#" class="cta">View Details</a>
         </div>
@@ -208,6 +213,13 @@
       </div>
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
+          <li class="date" data-date="2020 - 2020">
+            <h1>Le Wagon</h1>
+            <p>
+              Jul 2020 - Sep 2020<br>
+              Junior Software Engineer
+            </p>
+          </li>
           <li class="date" data-date="2016 - 2020">
             <h1>Australian Unity</h1>
             <p>
