edited background of website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Software Engineer | Web Design | Photographer</h6>
+      <h6>Software Engineer | Web Designer | Photographer</h6>
     </div>
   </header>
 
