added links on social media icons

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         <div class="social-media">
           <div class="nav-list">
             <li>
-              <a href="#" class="icon-link">
+              <a href="https://github.com/lodipalle" target="_blank" class="icon-link">
                 <i class="fab fa-github-square"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="icon-link">
+              <a href="https://www.linkedin.com/in/lodipalle/" target="_blank" class="icon-link">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="icon-link">
+              <a href="https://www.instagram.com/flossytank/" target="_blank" class="icon-link">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
@@ -102,7 +102,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Services</h1>
-        <h6>What I can do for you</h6>
+        <h6>What I Offer</h6>
       </div>
       <div class="my-skills">
         <div class="skill" data-aos="fade-in" data-aos-delay="300">
@@ -148,7 +148,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6>View some of my recent work</h6>
+        <h6>View My Recent Work</h6>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
@@ -209,7 +209,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Work Experience</h1>
-        <h6>Past and current jobs</h6>
+        <h6>Past & Current Jobs</h6>
       </div>
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
