refined descriptions on contact me

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Services</h1>
-        <h6>What I Offer</h6>
+        <h6>What I Can Offer</h6>
       </div>
       <div class="my-skills">
         <div class="skill" data-aos="fade-in" data-aos-delay="300">
@@ -283,7 +283,9 @@
     <div class="container">
       <div class="section-heading">
         <h1>Contact</h1>
-        <h6>Let's Work Together</h6>
+        <h6>Let's Work Together</h6><br>
+        <h6><u>GitHub</u>: github.com/lodipalle</h6>
+        <h6><u>LinkedIn</u>: linkedin.com/in/lodipalle</h6>
       </div>
       <form action="" data-aos="fade-up" data-aos-delay="300">
         <label for="name">Name:</label>
