--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           As a former nurse, I am efficient in working within a team and in high
           pressure work situations. As a former afterhours nurse in-charge,
           I am capable of managing a team myself. <br><br>
-          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, Bootstrap, and CSS <br>
+          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, and Bootstrap <br>
           <u>Currently Learning</u>: React.js, Framework & Algorithms, and Python <br>
-          <u>Other Skills</u>: Facebook Ads, Lightroom, Trello, GitHub, Heroku, and Figma
+          <u>Other Skills</u>: Facebook Ads, Photoshop, Lightroom, GitHub, Figma, and Heroku
         </p>
         <div class="social-media">
           <div class="nav-list">
@@ -109,20 +109,20 @@
           <div class="icon-container">
             <i class="fas fa-layer-group"></i>
           </div>
-          <h1>Web Design</h1>
+          <h1>Software Development</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Trained on full stack software development, I can build websites
+            and software for you from the ground up.
           </p>
         </div>
         <div class="skill" data-aos="fade-in" data-aos-delay="600">
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1>Software Development</h1>
+          <h1>Web Design</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            With a keen eye on detail and colors, I can design and build eye-
+            pleasing web pages for you.
           </p>
         </div>
         <div class="skill" data-aos="fade-in" data-aos-delay="900">
@@ -131,8 +131,8 @@
           </div>
           <h1>Photography</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            A self taught photographer, I can shoot pictures for you and also do
+            all the post-processing of the photos.
           </p>
         </div>
       </div>
@@ -155,7 +155,7 @@
           <img src="images/portitem1.png" alt="">
         </div>
         <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
-          <h6>Web Development</h6>
+          <h6>Software Development</h6>
           <h1>MyHomies App</h1>
           <p>
             An all-purpose app for housemates! Built thru Ruby on Rails framework using Ruby,
