corrected some error on navbar in main.css

--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
         <input type="email" id="email" name="email" placeholder="Enter your email" required>
         <label for="service">Services:</label>
         <select name="services" id="service">
+          <option value="">Software Development</option>
           <option value="">Web Design</option>
-          <option value="">Web Development</option>
           <option value="">Photography</option>
         </select>
         <label for="subject">Subject:</label>
