refining contents on index.html

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       <div class="section-heading">
         <h1>Contact</h1>
         <h6>Let's Work Together</h6><br>
+        <h6><u>Email</u>: lodipalle@gmail.com</h6>
         <h6><u>GitHub</u>: github.com/lodipalle</h6>
         <h6><u>LinkedIn</u>: linkedin.com/in/lodipalle</h6>
       </div>
@@ -299,7 +300,8 @@
           <option value="">Photography</option>
         </select>
         <label for="subject">Subject:</label>
-        <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
+        <textarea name="subject" id="subject" cols="10" rows="10"
+        placeholder="Contact form not functional yet. Pls contact me via email or thru LinkedIn. Thank you."></textarea>
       <input type="submit" value="submit">
       </form>
     </div>
