minor changes on contact me submit placeholder

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </select>
         <label for="subject">Subject:</label>
         <textarea name="subject" id="subject" cols="10" rows="10"
-        placeholder="Contact form not functional yet. Pls contact me via email or thru LinkedIn. Thank you."></textarea>
+        placeholder="Contact form not functional yet. Pls contact me via email or LinkedIn. Thank you."></textarea>
       <input type="submit" value="submit">
       </form>
     </div>
