--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Software Engineer | Web Designer | Photographer</h6>
+      <h6>Software Engineer | Web Designer | Photographer</h6><br>
     </div>
   </header>
 
@@ -51,6 +51,9 @@
     <div class="container">
       <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
         <img src="images/profile.jpg" alt="Lodi">
+        <form target="_blank" action="cv-lodi-palle.pdf" class="download-cv">
+          <input type="submit" value="Download CV" />
+        </form>
       </div>
       <div class="about-details" data-aos="fade-left" data-aos-delay="600">
         <div class="about-heading">
@@ -148,7 +151,8 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6>View My Recent Work</h6>
+        <h6>View My Recent Work</h6><br>
+        <p>See full portfolio on <a href="https://github.com/lodipalle" target="_blank" class="outside-link">github.com/lodipalle</a></p>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
@@ -284,9 +288,8 @@
       <div class="section-heading">
         <h1>Contact</h1>
         <h6>Let's Work Together</h6><br>
-        <h6><u>Email</u>: lodipalle@gmail.com</h6>
-        <h6><u>GitHub</u>: github.com/lodipalle</h6>
-        <h6><u>LinkedIn</u>: linkedin.com/in/lodipalle</h6>
+        <h6>email: lodipalle@gmail.com</h6>
+        <h6>linkedin: <a href="https://www.linkedin.com/in/lodipalle/" target="_blank" class="outside-link">linkedin.com/in/lodipalle</a></h6>
       </div>
       <form action="" data-aos="fade-up" data-aos-delay="300">
         <label for="name">Name:</label>
