justified alignment of p tags

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           </div>
           <h1>Software Development</h1>
           <p>
-            Trained on full stack software development, I can build websites
-            and software for you from the ground up.
+            Trained on both frontend and backend development, I can build
+            websites and software for you from the ground up.
           </p>
         </div>
         <div class="skill" data-aos="fade-in" data-aos-delay="600">
@@ -124,7 +124,7 @@
           </div>
           <h1>Web Design</h1>
           <p>
-            With a keen eye on detail and colors, I can design and build eye-
+            With a keen eye on details and colors, I can design and build eye-
             pleasing web pages for you.
           </p>
         </div>
@@ -134,8 +134,8 @@
           </div>
           <h1>Photography</h1>
           <p>
-            A self taught photographer, I can shoot pictures for you and also do
-            all the post-processing of the photos.
+            A self taught photographer, I can shoot pictures for you and do all
+            the post-processing of the photos.
           </p>
         </div>
       </div>
@@ -152,7 +152,7 @@
       <div class="section-heading">
         <h1>Portfolio</h1>
         <h6>View My Recent Work</h6><br>
-        <p>See full portfolio on <a href="https://github.com/lodipalle" target="_blank" class="outside-link">github.com/lodipalle</a></p>
+        <p class="portfolio-label">See full portfolio on <a href="https://github.com/lodipalle" target="_blank" class="outside-link">github.com/lodipalle</a></p>
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
