--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             home expenses, assign chores, & organize events. It also has a built-in chatroom
             to make communication within house quick, simple, & reliable.
           </p>
-          <a href="#" class="cta">View Details</a>
+          <a href="#" class="cta">See More</a>
         </div>
       </div>
       <div class="portfolio-item">
@@ -179,7 +179,7 @@
             which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
             Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
           </p>
-          <a href="#" class="cta">View Details</a>
+          <a href="#" class="cta">See More</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
           <img src="images/portitem2.jpg" alt="">
@@ -198,7 +198,7 @@
             doing portrait shoots sometimes as well. I mostly shoot on micro four thirds format using
             my trusty Panasonic Lumix G9.
           </p>
-          <a href="#" class="cta">View Details</a>
+          <a href="#" class="cta">See More</a>
         </div>
       </div>
     </div>
