--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </select>
         <label for="subject">Subject:</label>
         <textarea name="subject" id="subject" cols="10" rows="10"
-        placeholder="Still working on the functionality. Pls contact me via my email or LinkedIn."></textarea>
+        placeholder="Still working on the functionality. Pls contact me via email or LinkedIn."></textarea>
       <input type="submit" value="submit">
       </form>
     </div>
