working on contact me form

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <h6>email: lodipalle@gmail.com</h6>
         <h6>linkedin: <a href="https://www.linkedin.com/in/lodipalle/" target="_blank" class="outside-link">linkedin.com/in/lodipalle</a></h6>
       </div>
-      <form action="" data-aos="fade-up" data-aos-delay="300">
+      <form action="" method="POST" data-aos="fade-up" data-aos-delay="300">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <label for="email">Email:</label>
