--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
       </form>
     </div>
   </section>
+
+  <!-- End of Contact Me -->
+
+
+  <!-- Start of copyright -->
+
   <footer class="copyright">
     <div class="up" id="up">
       <i class="fas fa-chevron-up"></i>
@@ -316,7 +322,7 @@
     <p>&copy; 2020 Lodi Palle</p>
   </footer>
 
-  <!-- End of Contact Me -->
+  <!-- End of copyright -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
