added links to portfolio and also another project link

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             home expenses, assign chores, & organize events. It also has a built-in chatroom
             to make communication within house quick, simple, & reliable.
           </p>
-          <a href="#" class="cta">See More</a>
+          <a href="https://youtu.be/YoNKXKrAaKE?t=855" target="_blank" class="cta">See More</a>
         </div>
       </div>
       <div class="portfolio-item">
@@ -179,7 +179,7 @@
             which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
             Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
           </p>
-          <a href="#" class="cta">See More</a>
+          <a href="https://condescending-easley-621bfe.netlify.app/" target="_blank" class="cta">See More</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
           <img src="images/portitem2.jpg" alt="">
@@ -198,7 +198,22 @@
             doing portrait shoots sometimes as well. I mostly shoot on micro four thirds format using
             my trusty Panasonic Lumix G9.
           </p>
-          <a href="#" class="cta">See More</a>
+          <a href="images/flinders-station-landscape-shot.jpg" target="_blank" class="cta">See More</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="2100">
+          <h6>Web Design</h6>
+          <h1>Real Estate Website</h1>
+          <p>
+            Built using Javascript, HTML, and CSS, I designed and built this webpage for a restaurant 
+            which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
+            Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
+          </p>
+          <a href="https://practical-roentgen-fbd6b6.netlify.app/" target="_blank" class="cta">See More</a>
+        </div>
+        <div class="portfolio-img" data-aos="fade-left" data-aos-delay="2400">
+          <img src="images/portitem4.jpg" alt="">
         </div>
       </div>
     </div>
