added description of fourth latest project

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <h6>Web Design</h6>
           <h1>Restaurant Menu Page</h1>
           <p>
-            Built using Javascript, HTML, and CSS, I designed and built this webpage for a restaurant 
+            Built using Javascript, HTML, and CSS, I designed and made this webpage for a restaurant 
             which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
             Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
           </p>
@@ -206,9 +206,10 @@
           <h6>Web Design</h6>
           <h1>Real Estate Website</h1>
           <p>
-            Built using Javascript, HTML, and CSS, I designed and built this webpage for a restaurant 
-            which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
-            Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
+            Built using Javascript, HTML, and CSS, this real estate website shows a list of properties
+            and also the agents handling them. It has a contact form to directly send messages to the agents
+            and also allows you to scroll through testimonials of past clients. The website comes with
+            functionalities and features - it even adapts to different screen sizes.        
           </p>
           <a href="https://practical-roentgen-fbd6b6.netlify.app/" target="_blank" class="cta">See More</a>
         </div>
