added current experience

--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
           <li class="date" data-date="2020 - 2020">
+            <h1>GIS Global</h1>
+            <p>
+              Sep 2020 - PRESENT<br>
+              Junior Software Engineer
+            </p>
+          </li>
+          <li class="date" data-date="2020 - 2020">
             <h1>Le Wagon</h1>
             <p>
               Jul 2020 - Sep 2020<br>
