added current experience

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <h1>GIS Global</h1>
             <p>
               Sep 2020 - PRESENT<br>
-              Junior Software Engineer
+              Junior Frontend Engineer
             </p>
           </li>
           <li class="date" data-date="2020 - 2020">
