--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#about" class="nav-link">About</a>
         </li>
         <li>
-          <a href="#services" class="nav-link">Services</a>
+          <a href="#skills" class="nav-link">Skills</a>
         </li>
         <li>
           <a href="#portfolio" class="nav-link">Portfolio</a>
@@ -99,12 +99,12 @@
   <!-- End of About Myself -->
 
 
-  <!-- Start of My Services -->
+  <!-- Start of Skills -->
 
-  <section class="services" id="services">
+  <section class="skills" id="skills">
     <div class="container">
       <div class="section-heading">
-        <h1>Services</h1>
+        <h1>Skills</h1>
         <h6>What I Can Offer</h6>
       </div>
       <div class="my-skills">
@@ -142,10 +142,10 @@
     </div>
   </section>
 
-  <!-- End of My Services -->
+  <!-- End of Skills -->
 
 
-  <!-- Start of My Portfolio -->
+  <!-- Start of Portfolio -->
 
   <section class="portfolio" id="portfolio">
     <div class="container">
@@ -220,10 +220,10 @@
     </div>
   </section>
 
-  <!-- End of My Portfolio -->
+  <!-- End of Portfolio -->
 
 
-  <!-- Start of My Work Experience -->
+  <!-- Start of Work Experience -->
 
   <section class="experience" id="experience">
     <div class="container">
@@ -301,7 +301,7 @@
     </div>
   </section>
 
-  <!-- End of My Work Experience -->
+  <!-- End of Work Experience -->
 
   
   <!-- Start of Contact Me -->
