added video app rundown, edited links, and changed image on portfolio section

--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
             An all-purpose app for housemates! Built thru Ruby on Rails framework using Ruby,
             Javascript, HTML, and SCSS, this software allows for household members to manage
             home expenses, assign chores, & organize events. It also has a built-in chatroom
-            to make communication within house quick, simple, & reliable.
+            to make communication within house quick, simple, & reliable. 
           </p>
-          <a href="https://youtu.be/YoNKXKrAaKE?t=855" target="_blank" class="cta">See More</a>
+          <a href="https://youtu.be/YoNKXKrAaKE?t=855" target="_blank" class="cta">See video demo here</a><br>
+          <a href="videos/myhomiesapp-demo.mp4" target="_blank" class="cta">See More</a>
         </div>
       </div>
       <div class="portfolio-item">
