edited video and portfolio link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             to make communication within house quick, simple, & reliable. 
           </p>
           <a href="https://youtu.be/YoNKXKrAaKE?t=855" target="_blank" class="cta">See video demo here</a><br>
-          <a href="videos/myhomiesapp-demo.mp4" target="_blank" class="cta">See More</a>
+          <a href="videos/myhomies-app-demo.mp4" target="_blank" class="cta">See More</a>
         </div>
       </div>
       <div class="portfolio-item">
