deleted personal ig link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/flossytank/" target="_blank" class="icon-link">
+              <a href="#" target="_blank" class="icon-link">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
