revised about me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Software Engineer | Photographer</h6><br>
+      <h6>Software Engineer | Landscape Photographer</h6><br>
     </div>
   </header>
 
@@ -64,11 +64,11 @@
           My vision is to build huge and exciting software that is
           both essential to the world and commercially successful.
           As a software engineer, my real passion is on web and UX design.
-          Creating software appeals to my artistic, creativite, and innovative side,
-          hence I am always looking to grow and improve as a developer. <br><br>
+          Creating software appeals to my artistic, creativite, and innovative
+          side, hence I am always looking to grow and improve as a developer. <br><br>
           As a former nurse, I am efficient in working within a team and in high
-          pressure work situations. As a former afterhours nurse in-charge,
-          I am capable of managing a team myself. <br><br>
+          pressure work situations. As a former nurse manager, I am capable of
+          managing a team myself. <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, and Bootstrap <br>
           <u>Currently Learning</u>: React.js, Framework & Algorithms, and Python <br>
           <u>Other Skills</u>: Facebook Ads, Photoshop, Lightroom, GitHub, Figma, and Heroku
