updated work experience

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <div class="timeline" data-aos="fade-down" data-aos-delay="300">
         <ul>
           <li class="date" data-date="2020 - 2020">
-            <h1>GIS Global</h1>
+            <h1>Green Innovation Systems</h1>
             <p>
               Sep 2020 - PRESENT<br>
               Junior Frontend Engineer
