--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <h1>Royal Freemasons</h1>
               <p>
                 May 2019 - Sept 2019<br>
-                Afterhours Supervisor (Grade 5 RN)
+                Care Manager (Grade 5 RN)
               </p>
             </li>
             <li class="date" data-date="2017 - 2018">
