--- a/index.html
+++ b/index.html
@@ -245,28 +245,28 @@
             <h1>Australian Unity</h1>
             <p>
               Feb 2016 - May 2020<br>
-              Afterhours Facility In-charge (Grade 5 RN)
+              Afterhours RN In-charge (Grade 5 RN)
             </p>
           </li>
           <li class="date" data-date="2019 - 2020">
             <h1>Aktrapid Nursing</h1>
             <p>
               Sept 2019 - May 2020<br>
-              Grade 5 RN
+              Casual afterhours in-charge (Grade 5 RN)
             </p>
           </li>
           <li class="date" data-date="2019 - 2020">
             <h1>Belmore Nurses</h1>
             <p>
               Sept 2019 - May 2020<br>
-              Grade 5 RN
+              Casual afterhours in-charge (Grade 5 RN)
             </p>
           </li>
           <li class="date" data-date="2020 - 2020">
             <h1>Healthcare Australia</h1>
             <p>
               Feb 2020 - May 2020<br>
-              Grade 5 RN
+              Casual afterhours in-charge (Grade 5 RN)
             </p>
             <li class="date" data-date="2019 - 2019">
               <h1>Royal Freemasons</h1>
@@ -279,7 +279,7 @@
               <h1>ArCare</h1>
               <p>
                 Aug 2017 - May 2018<br>
-                Grade 5 RN
+                Casual afterhours in-charge (Grade 5 RN)
               </p>
             </li>
             <li class="date" data-date="2016 - 2017">
