--- a/index.html
+++ b/index.html
@@ -252,21 +252,21 @@
             <h1>Aktrapid Nursing</h1>
             <p>
               Sept 2019 - May 2020<br>
-              Casual afterhours in-charge (Grade 5 RN)
+              Casual afterhours RN In-charge (Grade 5 RN)
             </p>
           </li>
           <li class="date" data-date="2019 - 2020">
             <h1>Belmore Nurses</h1>
             <p>
               Sept 2019 - May 2020<br>
-              Casual afterhours in-charge (Grade 5 RN)
+              Casual afterhours RN In-charge (Grade 5 RN)
             </p>
           </li>
           <li class="date" data-date="2020 - 2020">
             <h1>Healthcare Australia</h1>
             <p>
               Feb 2020 - May 2020<br>
-              Casual afterhours in-charge (Grade 5 RN)
+              Casual afterhours RN In-charge (Grade 5 RN)
             </p>
             <li class="date" data-date="2019 - 2019">
               <h1>Royal Freemasons</h1>
@@ -279,7 +279,7 @@
               <h1>ArCare</h1>
               <p>
                 Aug 2017 - May 2018<br>
-                Casual afterhours in-charge (Grade 5 RN)
+                Casual afterhours RN In-charge (Grade 5 RN)
               </p>
             </li>
             <li class="date" data-date="2016 - 2017">
