--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
               <h1>ArCare</h1>
               <p>
                 Aug 2017 - May 2018<br>
-                Casual After-hours RN Incharge (Grade 5 RN)
+                PM/ND RN Incharge (Grade 5 RN)
               </p>
             </li>
             <li class="date" data-date="2016 - 2017">
