--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <h1>Green Innovation Systems</h1>
             <p>
               Oct 2020 - Dec 2020<br>
-              Junior Frontend Engineer
+              Frontend Engineer Intern
             </p>
           </li>
           <li class="date" data-date="2016 - 2020">
