--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <h1>Aussie Digital Business Systems</h1>
             <p>
               Dec 2020 - PRESENT<br>
-              Junior Frontend Engineer
+              Frontend Engineer
             </p>
           </li>
           <li class="date" data-date="2020 - 2020">
