--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
         <img src="images/profile.jpg" alt="Lodi">
-        <form target="_blank" action="cv-lodi-palle.pdf" class="download-cv">
+        <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
           <input type="submit" value="Download CV" />
         </form>
       </div>
